<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="appearance"
        app:title="@string/settings_appearance_category_title">

        <ListPreference
            app:key="clawphones_appearance_mode"
            app:title="@string/settings_dark_mode_title"
            app:entries="@array/settings_dark_mode_entries"
            app:entryValues="@array/settings_dark_mode_values"
            app:defaultValue="system"
            app:summary="%s"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <Preference
        app:key="termux"
        app:title="@string/termux_preferences_title"
        app:summary="@string/termux_preferences_summary"
        app:fragment="com.termux.app.fragments.settings.TermuxPreferencesFragment"/>

    <Preference
        app:key="clawphones_plan"
        app:title="@string/plan_preference_title"
        app:summary="@string/plan_preference_summary"
        app:persistent="false" />

    <Preference
        app:key="termux_api"
        app:title="@string/termux_api_preferences_title"
        app:summary="@string/termux_api_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.termux.app.fragments.settings.TermuxAPIPreferencesFragment"/>

    <Preference
        app:key="termux_float"
        app:title="@string/termux_float_preferences_title"
        app:summary="@string/termux_float_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.termux.app.fragments.settings.TermuxFloatPreferencesFragment"/>

    <Preference
        app:key="termux_tasker"
        app:title="@string/termux_tasker_preferences_title"
        app:summary="@string/termux_tasker_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.termux.app.fragments.settings.TermuxTaskerPreferencesFragment"/>

    <Preference
        app:key="termux_widget"
        app:title="@string/termux_widget_preferences_title"
        app:summary="@string/termux_widget_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.termux.app.fragments.settings.TermuxWidgetPreferencesFragment"/>

    <Preference
        app:key="about"
        app:title="@string/about_preference_title"
        app:persistent="false"/>
    <!-- app:layout="@layout/preference_markdown_text" -->

    <Preference
        app:key="donate"
        app:title="@string/donate_preference_title"
        app:persistent="false"
        app:isPreferenceVisible="false"/>

</PreferenceScreen>
